[gd_scene load_steps=2 format=3 uid="uid://peus1pmxk7os"]

[ext_resource type="Script" path="res://global/main_menu.gd" id="1_nd0ea"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nd0ea")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 23.0
offset_right = 78.0
offset_bottom = 46.0
grow_horizontal = 2
text = "GO!BUBBLEGUY!GO!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="new_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "new game"

[node name="credites" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "credits"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit"

[connection signal="pressed" from="VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/credites" to="." method="_on_credites_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
